Device: Check object path in interfaces removed slot

Only remove Input and MediaPlayer objects when path matches.

BUG: 403289
FIXED-IN: 5.57

Differential Revision: https://phabricator.kde.org/D18315